# OctoPrint-Remote_connection

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: remote_connection.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_remote_connection/: __init__.py
octoprint_remote_connection/static/js/: remote_connection.js
octoprint_remote_connection/templates/: remote_connection_settings.jinja2
octoprint_remote_connection/translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/: messages.pot
